src/test/deca/etapeC/valid/test_assign_negatif.deca
// Description:
//   Test d'une assignation négative
//
// Resultats:
//  ima_output: -1
//

{
    int a = -1;
    print(a);
}
