src/test/deca/etapeC/invalid/sub_overflow_float.deca
// Description:
//   Test d'un débordement arithmétique de flottant
//
// Resultats:
//  ima_output: overflow
//

{
    float a = -1000000000000000000000000000000000.0;
    while(true){
        a = a - a;
    }

}